--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -12,7 +12,7 @@
 	position: absolute;
 	width: 10%;
 	aspect-ratio: 1 / 1;
-	background-image: url('../../public/assets/next.svg');
+	background-image: url('../assets/next.svg');
 	right: 120%;
 	top: 1%;
 	pointer-events: none;
